force-app/main/default/objects/Budget__c/fields/Allocation_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Overhead__c</fullName>
    <label>Overhead/Profit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5/5</fullName>
            </value>
            <value>
                <fullName>6/6</fullName>
            </value>
            <value>
                <fullName>7/7</fullName>
            </value>
            <value>
                <fullName>8/8</fullName>
            </value>
            <value>
                <fullName>9/9</fullName>
            </value>
            <value>
                <fullName>10/10</fullName>
            </value>
            <value>
                <fullName>10/5</fullName>
            </value>
            <value>
                <fullName>0/0</fullName>
                <isActive>false</isActive>
                <label>0/0</label>
            </value>
            <value>
                <fullName>1/1</fullName>
                <isActive>false</isActive>
                <label>1/1</label>
            </value>
            <value>
                <fullName>2/2</fullName>
                <isActive>false</isActive>
                <label>2/2</label>
            </value>
            <value>
                <fullName>3/3</fullName>
                <isActive>false</isActive>
                <label>3/3</label>
            </value>
            <value>
                <fullName>4/4</fullName>
                <isActive>false</isActive>
                <label>4/4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>