force-app/main/default/objects/Budget__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <formula>CASE(Allocation_Overhead__c,  &quot;5/5&quot;, (5/10)/1000, &quot;6/6&quot;, (6/10)/1000, &quot;7/7&quot;, (7/10)/1000, &quot;8/8&quot;, (8/10)/1000,&quot;9/9&quot;,(9/10)/1000, &quot;10/10&quot;, 1/1000, &quot;10/5&quot;,(7.5/10)/1000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>