force-app/main/default/objects/Budget__c/fields/Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Budget</label>
    <type>Checkbox</type>
</CustomField>