force-app/main/default/objects/Budget__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>