force-app/main/default/objects/Budget__c/fields/Budget_Count__c.field-meta.xml
<CustomField>
    <fullName>Budget_Count__c</fullName>
    <description>Used for counting the number of budgets on a job for reports.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>