force-app/main/default/objects/Budget__c/fields/Budget_LineItem_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_LineItem_Status__c</fullName>
    <label>Budget LineItem Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import Initiated</fullName>
            </value>
            <value>
                <fullName>Import Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>