force-app/main/default/objects/Budget__c/fields/Budget_Number_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Budget_Number_Incremental__c</fullName>
    <label>Budget Number Incremental</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>