force-app/main/default/objects/Budget__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <label>Budget Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted for Approval/Rejection</fullName>
                <default>true</default>
                <label>Not Submitted for Approval/Rejection</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>