force-app/main/default/objects/Budget__c/fields/Current_PDF_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_PDF_Version__c</fullName>
    <label>Current PDF Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>