force-app/main/default/objects/Budget__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <formula>ATI_Job__r.Estimated_Completion_Date__c</formula>
    <inlineHelpText>To edit the date, please refer back to ATI Job.</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>