force-app/main/default/objects/Budget__c/fields/Exclude_Tax_from_Total__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Tax_from_Total__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Exclude Tax from Total</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>