force-app/main/default/objects/Budget__c/fields/GP_Goal__c.field-meta.xml
<CustomField>
    <fullName>GP_Goal__c</fullName>
    <label>GP Goal %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>