force-app/main/default/objects/Budget__c/fields/Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Status__c</fullName>
    <label>Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initialized</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>