force-app/main/default/objects/Budget__c/fields/Job_Name_and_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_and_Number__c</fullName>
    <formula>ATI_Job__r.Name</formula>
    <label>Job Name and Number</label>
    <type>Text</type>
</CustomField>