force-app/main/default/objects/Budget__c/fields/Overhead__c.field-meta.xml
<CustomField>
    <fullName>Overhead__c</fullName>
    <description>Revenue * 10% if the 10/10 is checked. Calculated via code.</description>
    <label>Overhead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>