force-app/main/default/objects/Budget__c/fields/Overhead_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Allocations__c</fullName>
    <formula>Overhead__c * (VALUE(TEXT(Allocations__c)))/ 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overhead Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>