force-app/main/default/objects/Budget__c/fields/Overhead_Profit_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Profit_Sales_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overhead/Profit Sales Tax</label>
    <type>Checkbox</type>
</CustomField>