force-app/main/default/objects/Budget__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets updated via trigger (apexcode: BudgetFieldUpdate) when a new budget record is created.</description>
    <label>Previous Version</label>
    <type>Checkbox</type>
</CustomField>