force-app/main/default/objects/Budget__c/fields/Profit_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Profit_Allocations__c</fullName>
    <formula>Profit__c * (VALUE(TEXT(Allocations__c))) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>