force-app/main/default/objects/Budget__c/fields/Project_Director__c.field-meta.xml
<CustomField>
    <fullName>Project_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>