force-app/main/default/objects/Budget__c/fields/Reject_Budget__c.field-meta.xml
<CustomField>
    <fullName>Reject_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject Budget</label>
    <type>Checkbox</type>
</CustomField>