force-app/main/default/objects/Budget__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <inlineHelpText>Place for comments when a budget is rejected.</inlineHelpText>
    <label>Rejected Reason</label>
    <type>TextArea</type>
</CustomField>