force-app/main/default/objects/Budget__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>