force-app/main/default/objects/Budget__c/fields/Sales_Tax_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Allocations__c</fullName>
    <formula>If(Tax_Exempt__c = False,

(Sales_Tax__c * (VALUE(TEXT(Allocations__c))) / 100)+ Sales_Tax_with_Overhead__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>