force-app/main/default/objects/Budget__c/fields/Sales_Tax_with_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_with_Overhead__c</fullName>
    <formula>If( Overhead_Profit_Sales_Tax__c = True, ((Sales_Tax__c * Allocation_Percentage__c) * 2), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax with Overhead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>