force-app/main/default/objects/Budget__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>ATI_Job__r.Job_Start_Date__c</formula>
    <inlineHelpText>To edit the date, please refer back to ATI Job.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>