force-app/main/default/objects/Budget__c/fields/Store_Log__c.field-meta.xml
<CustomField>
    <fullName>Store_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store log if the values of Overhead/Profit is other than provided values</description>
    <inlineHelpText>To store log if the values of Overhead/Profit is other than provided values</inlineHelpText>
    <label>Store Log</label>
    <type>Checkbox</type>
</CustomField>