force-app/main/default/objects/Budget__c/fields/Subtotal_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Revenue__c</fullName>
    <label>Subtotal Revenue</label>
    <summarizedField>Budget_Line_Item__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.Is_Parent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>