force-app/main/default/objects/Budget__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Tax From Totals</label>
    <type>Checkbox</type>
</CustomField>