force-app/main/default/objects/Budget__c/fields/Total_Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Costs__c</fullName>
    <formula>Total_Allocations__c + Total_Subcontractor_bid__c + Total_In_House_Total__c + Total_Materials__c +  Total_Program_Fees_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>