force-app/main/default/objects/Budget__c/fields/Total_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocations__c</fullName>
    <formula>Subtotal_Allocations__c + Overhead_Allocations__c + Profit_Allocations__c + Sales_Tax_Allocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>