force-app/main/default/objects/Budget__c/fields/Total_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Profit__c</fullName>
    <formula>Total_Profit__c  /  Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>