force-app/main/default/objects/Budget__c/fields/Total_Program_Fees_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Fees_New__c</fullName>
    <formula>Total_Revenue__c * VALUE(TEXT(X3_Program_Fees__c)) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program Fees (from Total Revenue)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>