force-app/main/default/objects/Budget__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>IF(AND(Tax_Exempt__c = FALSE,  Overhead_Profit_Sales_Tax__c = False) , Subtotal_Revenue__c + Overhead__c + Profit__c + Sales_Tax__c,
IF(AND(Tax_Exempt__c = False, Overhead_Profit_Sales_Tax__c = TRUE), Subtotal_Revenue__c + Overhead__c + Profit__c + Sales_Tax_Percent__c, 
Subtotal_Revenue__c + Overhead__c + Profit__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>