force-app/main/default/objects/Budget__c/fields/Total_Subcontractor_bid__c.field-meta.xml
<CustomField>
    <fullName>Total_Subcontractor_bid__c</fullName>
    <label>Total Subcontractor bid</label>
    <summarizedField>Budget_Line_Item__c.Subcontractor_bid__c</summarizedField>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.Is_Parent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>