force-app/main/default/objects/Budget__c/validationRules/Must_select_GP_goal.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_select_GP_goal</fullName>
    <active>false</active>
    <description>User must select a GP goal % above 0 to save budget (default is 0)</description>
    <errorConditionFormula>ISPICKVAL(GP_Goal__c,&quot;0&quot;)</errorConditionFormula>
    <errorMessage>GP Goal % must be greater than 0.</errorMessage>
</ValidationRule>